--- a/faculty.html
+++ b/faculty.html
@@ -31,7 +31,8 @@
   </head>
   <body>
 
-  
+   <div id="whatsapp"><a href="https://wa.me/996550717171" ><img src="images/wh.png"></a></div>
+
       
 
       <nav id="navbar" class="navbar navbar-default probootstrap-navbar" >
