--- a/labs.html
+++ b/labs.html
@@ -26,7 +26,8 @@
   </head>
   <body>
 
-    
+     <div id="whatsapp"><a href="https://wa.me/996550717171" ><img src="images/wh.png"></a></div>
+
       <nav id="navbar" class="navbar navbar-default probootstrap-navbar" >
         <div class="container">
           <div class="navbar-header">
