--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
                   <li><a href="News/news.html">News</a></li>
-                  <li><a href="error.html">Developments</a></li>
+                  <li><a href="dontcopypaste.html">Developments</a></li>
                   <li><a href="http://ic.iaau.edu.kg/">Exchange Programs</a></li>
                   <li><a href="error.html">Prospective Students</a></li>
                   <li><a href="error.html">Alumni</a></li>
