--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 text-left">
-                <p>&copy; 2018 <a href="https://probootstrap.com/">International Ala-Too University</a></p>
+                <p>&copy; 2018 <a href="dontcopypaste.html">International Ala-Too University</a></p>
               </div>
               <div class="col-md-4 probootstrap-back-to-top">
                 <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
